# gproxy-protocol

./: Cargo.toml
.github/workflows/: release.yml
src/claude/count_tokens/: types.rs
src/claude/create_message/: stream.rs  types.rs
src/openai/count_tokens/: types.rs
src/openai/create_chat_completions/: types.rs
src/transform/: dispatch.rs
src/transform/claude/: nonstream_to_stream.rs  stream_to_nonstream.rs
src/transform/claude/count_tokens/openai/: request.rs
src/transform/claude/generate_content/: utils.rs
src/transform/claude/generate_content/gemini/: response.rs
src/transform/claude/generate_content/openai_chat_completions/: request.rs  response.rs
src/transform/claude/generate_content/openai_response/: request.rs  response.rs
src/transform/claude/stream_generate_content/: utils.rs
src/transform/claude/stream_generate_content/openai_response/: response.rs
src/transform/gemini/count_tokens/openai/: request.rs
src/transform/gemini/generate_content/openai_chat_completions/: request.rs
src/transform/gemini/generate_content/openai_response/: request.rs
src/transform/openai/count_tokens/claude/: request.rs  utils.rs
src/transform/openai/generate_content/openai_chat_completions/: utils.rs
src/transform/openai/generate_content/openai_chat_completions/claude/: request.rs  response.rs  utils.rs
src/transform/openai/generate_content/openai_chat_completions/openai_response/: request.rs  response.rs
src/transform/openai/generate_content/openai_response/claude/: request.rs  response.rs
(+7 files in other folders)
