[package]
name = "gproxy-protocol"
version = "1.0.21"
edition = "2024"
authors = ["LeenHawk <leenhawk@leenhawk.com>"]
license = "MIT"
description = "Wire-format types and cross-protocol transforms for Claude, OpenAI, and Gemini LLM APIs."
homepage = "https://github.com/LeenHawk/gproxy-protocol"
repository = "https://github.com/LeenHawk/gproxy-protocol"
readme = "README.md"
keywords = ["llm", "openai", "anthropic", "gemini", "claude"]
categories = ["api-bindings", "data-structures", "encoding"]

[dependencies]
base64 = "0.22"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
tracing = "0.1"
url = "2"
